# codingame_smash_the_code

./: .gitignore  CMakeLists.txt  game.cpp  main.cpp  sample_input.txt  submit.sh
gtest/: brain_test.cpp  cell_test.cpp  character_test.cpp  input_test.cpp  output_test.cpp  path_test.cpp  point_test.cpp  state_test.cpp
input/: all_direction_chain.txt  err.txt  simple_chain.txt
test/: test_io.cpp  test_vanish.cpp
